config: add openfeign client for lastfm api key config

--- a/mslastfm/src/main/resources/application.yml
+++ b/mslastfm/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
             username: ${MONGODB_USERNAME}
             password: ${MONGODB_PASSWORD}
     
+
+lastfm:
+    api:
+        key: ${LASTFM_API_KEY}
