config: config rabbitmq and pom.xml dependencies

--- a/msspotify/src/main/resources/application.yml
+++ b/msspotify/src/main/resources/application.yml
@@ -1,3 +1,11 @@
 spring:
     application:
         name: msspotify
+    rabbitmq:
+        host: ${RABBITMQ_HOST}
+        port: ${RABBITMQ_PORT}
+        username: ${RABBITMQ_USERNAME}
+        password: ${RABBITMQ_PASSWORD}
+
+server:
+  port: 8082
