--- a/msspotify/src/main/resources/application.yml
+++ b/msspotify/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     config:
-        import: classpath:/config.yml
+        import: classpath:config.yml
     application:
         name: msspotify
     rabbitmq:
